--- a/.gitignore
+++ b/.gitignore
@@ -467,4 +467,6 @@ modules.xml
 pyvenv.cfg
 pip-selfcheck.json
 
+/.secrets
+
 # End of https://www.gitignore.io/api/macos,django,python,pycharm,jetbrains,virtualenv,pycharm+all,pycharm+iml
