--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ python:
 install:
 - pip3 install -r requirements.txt
 script:
+- python3 lifepet/manage.py makemigrations
 - python3 lifepet/manage.py test
 before_install:
 - openssl aes-256-cbc -K $encrypted_e54fe47961f4_key -iv $encrypted_e54fe47961f4_iv
-  -in secrets.tar.enc -out secrets.tar -d
+-in secrets.tar.enc -out secrets.tar -d
 - tar xvf secrets.tar
