--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ install:
 - pip3 install -r requirements.txt
 script:
 - python3 lifepet/manage.py makemigrations
+- python3 lifepet/manage.py migrate
 - python3 lifepet/manage.py test
 before_install:
 - openssl aes-256-cbc -K $encrypted_e54fe47961f4_key -iv $encrypted_e54fe47961f4_iv
